// Copyright Materialize, Inc. and contributors. All rights reserved.
//
// Use of this software is governed by the Business Source License
// included in the LICENSE file.
//
// As of the Change Date specified in that file, in accordance with
// the Business Source License, use of this software will be governed
// by the Apache License, Version 2.0.

syntax = "proto3";

import "google/protobuf/empty.proto";

package mz_storage_types.collections;

message GlobalId {
    oneof value {
        uint64 system = 1;
        uint64 user = 2;
        uint64 transient = 3;
        google.protobuf.Empty explain = 4;
    }
}

// Opaque timestamp type that is specific to Materialize.
message Timestamp {
    uint64 internal = 1;
}

message TimestampAntichain {
    repeated Timestamp elements = 1;
}

message DurableCollectionMetadata {
    reserved 1;
    reserved "remap_shard";

    // StringWrapper remap_shard = 1;
    string data_shard = 2;
}
